// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VitePlugin > Assigned version > output: Export 1`] = `
"console.log("this is main.ts");
const o = "1.0.0";
export {
  o as VITE_PLUGIN_VERSION_MARK_VERSION
};
"
`;

exports[`VitePlugin > Assigned version > output: Global 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
    <script>__VITE_PLUGIN_VERSION_MARK_VERSION__ = "1.0.0"</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`VitePlugin > Assigned version > output: Log 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
    <script>console.log("VITE_PLUGIN_VERSION_MARK_VERSION: 1.0.0")</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`VitePlugin > Assigned version > output: Meta 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta name="application-name" content="VITE_PLUGIN_VERSION_MARK_VERSION: 1.0.0">

    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`VitePlugin > Assigned version > output: None 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`VitePlugin > Name > assigned 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta name="application-name" content="MY_TEST_NAME_VERSION: 1.0.0">

    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DvLNQ2tW.js"></script>
    <script>console.log("MY_TEST_NAME_VERSION: 1.0.0")</script>
    <script>__MY_TEST_NAME_VERSION__ = "1.0.0"</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > Assigned version & output > output: Export 1`] = `
"console.log("this is main.ts");
const o = "1.0.0";
export {
  o as VITE_PLUGIN_VERSION_MARK_VERSION
};
"
`;

exports[`vitePlugin > Assigned version & output > output: Global 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
    <script>__VITE_PLUGIN_VERSION_MARK_VERSION__ = "1.0.0"</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > Assigned version & output > output: Log 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
    <script>console.log("VITE_PLUGIN_VERSION_MARK_VERSION: 1.0.0")</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > Assigned version & output > output: Meta 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta name="application-name" content="VITE_PLUGIN_VERSION_MARK_VERSION: 1.0.0">

    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > Assigned version & output > output: None 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > name > name: Custom 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta name="application-name" content="MY_TEST_NAME_VERSION: 1.0.0">

    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DvLNQ2tW.js"></script>
    <script>console.log("MY_TEST_NAME_VERSION: 1.0.0")</script>
    <script>__MY_TEST_NAME_VERSION__ = "1.0.0"</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > version & output > output: Export 1`] = `
"console.log("this is main.ts");
const o = "1.0.0";
export {
  o as VITE_PLUGIN_VERSION_MARK_VERSION
};
"
`;

exports[`vitePlugin > version & output > output: Global 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
    <script>__VITE_PLUGIN_VERSION_MARK_VERSION__ = "1.0.0"</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > version & output > output: Log 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
    <script>console.log("VITE_PLUGIN_VERSION_MARK_VERSION: 1.0.0")</script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > version & output > output: Meta 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta name="application-name" content="VITE_PLUGIN_VERSION_MARK_VERSION: 1.0.0">

    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`vitePlugin > version & output > output: None 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Vite + TS</title>
    <script type="module" crossorigin src="/assets/index-DUby6dX2.js"></script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;
